syntax = "proto2";
package protobuf;

enum RequestType {
    REQ = 0;
    PUB = 1;
    PUBREQ = 2;
};

message NatsContext {
    message Trail {
        optional string app_name = 1;
        optional RequestType put_type = 2;
        optional int64 time = 3;
        optional int32 timeNanos = 4;
        optional int64 deadline = 5;
        optional int32 deadlineNanos = 6;
    }
    repeated Trail trail = 1;
    optional string trace_id = 2;
}
