syntax = "proto2";
package protobuf;

import "nats.proto";

enum Subject {
    test_tests_unknown = 0;
    test_tests_get = 1;
    test_tests_replace = 2;
    test_tests_delete = 3;
    test_tests_find = 4;
}

message TestMessage {
    optional NatsContext context = 1;
    optional string data = 2;
}

